# rust-crash-course

./: README.md
bouncy/: Cargo.toml
bouncy/src/: args.rs  game.rs  main.rs
todo/: .env  Cargo.toml  Rocket.toml
todo/src/: controllers.rs  main.rs  models.rs
todo/src/controllers/: todos.rs
todo/src/models/: mod.rs  schema.rs
