[package]
name = "todo"
version = "0.1.0"
authors = ["Abraham Yusuf <aaondowasey@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["diesel_postgres_pool"] }
diesel = { version = "1.0.0", features = ["postgres"] }
serde = "*"
serde_json = "*"
serde_derive = "*"